# MovieGen_workflow

./: .gitignore  pyproject.toml
config/: project.example.yaml
docs/: moviegen_implementation_journal.md  moviegen_master_workflow_spec.md
input/: shot_specs.example.yaml
input/notes/: README.md
moviegen/: cli.py  config.py  models.py  providers.py  storage.py  workflow.py
